# bdd_exec_ros2

./: README.md  package.xml  setup.cfg  setup.py
bdd_exec_ros2/: conversions.py  observation.py
bdd_exec_ros2/behaviours/: fsm_pickplace.py
bdd_exec_ros2/executables/: bdd_coordination_node.py  mockup_behaviour_node.py  visualizer.py
bdd_exec_ros2/nodes/: bdd_coordination_node.py  mockup_behaviour_node.py
config/: bdd_server_only_configs.yaml  mockup_configs.yaml
launch/: launch_bdd_server_only.yaml
models/: pickplace.fsm
test/: test_copyright.py  test_mockup_bhv_server.py  test_mypy.py
