<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bdd_exec_ros2</name>
  <version>0.0.0</version>
  <description>Execution setup for bdd-dsl with ROS2</description>
  <maintainer email="1168534+minhnh@users.noreply.github.com">Minh Nguyen</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>bdd_ros2_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
